SPEC/SPECKIT/specs/007-kubernetes-containerization/manifests/base/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sargentnexus-client
spec:
  selector:
    app.kubernetes.io/name: sargentnexus-client
  ports:
    - name: http
      port: 80
      targetPort: http
