SPEC/SPECKIT/specs/007-kubernetes-containerization/manifests/base/sql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sargentnexus-sql
spec:
  selector:
    app.kubernetes.io/name: sargentnexus-sql
  ports:
    - name: tds
      port: 1433
      targetPort: tds
